fix: css clipping:

--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ h1 {
   display: flex;
   justify-content: center;
   overflow: hidden;
-  padding: 1rem;
-  margin: 5rem auto -1rem;
+  padding: 3rem;
+  margin: 0 auto -1rem;
   position: relative;
 }
 
@@ -134,7 +134,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   width: 300px;
-  margin: 3rem auto 0;
+  margin: 1rem auto 0;
 }
 
 .controls .btn {
